--- a/Foundations/Projects/landing-page/style.css
+++ b/Foundations/Projects/landing-page/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #1f2937;
   color: #f9faf8;
@@ -25,6 +29,46 @@ section {
   justify-content: space-between;
 }
 
+.title {
+  font-size: 48px;
+  font-weight: 900;
+  margin: 5px 0;
+}
+
+.text {
+  font-size: 18px;
+  color:#e5e7eb;
+  
+}
+
+.sign-up {
+  background-color: #3882f6;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  color:#e5e7eb;
+  font-weight: 700;
+}
+
+.awesome {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.awesome-text {
+  width: 40vw;
+}
+
+.awesome-img {
+  background-color: #4a4f57;
+  width: 40vw;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .space-container-header {
   width: 100%;
   display: flex;
@@ -48,7 +92,7 @@ section {
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
 }
 
@@ -67,5 +111,86 @@ section {
 }
 
 .blue-section {
+  border-radius: 15px;
   background-color: #3882f6;
+  padding: 50px 100px;
+  color: #f9faf8;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10vh 0;
+}
+
+.random-title {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  text-align: center;
+}
+
+.random-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+.random-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;
+  gap: 10px;
+  text-align: center;
+}
+
+.random-img {
+  width: 150px;
+  height: 150px;
+  border: 4px solid #3882f6;
+  border-radius: 15px;
+}
+
+.quote {
+  width: 100%;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+  color: #1f2937;
+}
+
+.quote-author {
+  width: 100%;
+  font-weight: 900;
+  position: relative;
+  text-align: end;
+}
+
+footer {
+  height: 15vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.action-title {
+  font-size: 24px;
+  margin: 5px 0;
+}
+
+.action-text {
+  margin: 5px 0;
+}
+
+.action-button {
+  background-color: #3882f6;
+  border: 2px solid #f9faf8;
+  border-radius: 10px;
+  padding: 5px 30px;
+  font-size: 16px;
+  color: #f9faf8;
+  font-weight: 700;
 }
