--- a/HTML & CSS/admin-dashboard/style.css
+++ b/HTML & CSS/admin-dashboard/style.css
@@ -14,24 +14,103 @@ body {
   width: 100vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: auto;
-  grid-template-areas: 
-  "sidebar header header header"
-  "sidebar main main main"
-  "sidebar main main main"
-  "sidebar main main main"
-  "sidebar main main main"
-  "sidebar main main main";
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(20, 1fr);
 }
 
 .header {
-  grid-area: header;
+  grid-area: 1 / 2 / 3 / 11;
   background-color: #fff;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: space-between;
+}
+
+.top-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
+.profile-m {
+  width: 40px;
+}
+
+.profile-l {
+  width: 60px;
+}
+
+.welcome {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.w-greeting {
+  display: flex;
+  flex-direction: column;
+}
+
+.greeting-h {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.profile-name-l {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.profile-name-m {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.bottom-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.dark-icon {
+  width: 20px;
+  fill: #242424;
+  cursor: pointer;
+}
+
+.search-ipt {
+  border: none;
+  border-radius: 10px;
+  background-color: #e2e8f0;
+  height: 1.5rem;
+  width: 45ch;
+}
+
+.btn {
+  border: none;
+  border-radius: 15px;
+  background-color: #1992d4;
+  color: #fff;
+  font-weight: 600;
+  padding: 7px 20px;
+  cursor: pointer;
 }
 
 .sidebar {
-  grid-area: sidebar;
+  grid-area: 1 / 1 / 21 / 2;
   background-color: #1992d4;
   display: flex;
   flex-direction: column;
@@ -74,7 +153,8 @@ body {
 }
 
 .main {
-  grid-area: main;
+  padding: 15px;
+  grid-area: 4 / 2 / 21 / 21;
   background-color: #e2e8f0;
   display: grid;
   grid-template-areas: 
