--- a/HTML & CSS/admin-dashboard/style.css
+++ b/HTML & CSS/admin-dashboard/style.css
@@ -9,17 +9,18 @@ a {
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   height: 100vh;
   width: 100vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(20, 1fr);
+  grid-template-rows: 150px 1fr;
 }
 
 .header {
-  grid-area: 1 / 2 / 3 / 11;
+  grid-area: 1 / 2 / 2 / 11;
   background-color: #fff;
   padding: 15px;
   display: flex;
@@ -96,7 +97,7 @@ body {
   border-radius: 10px;
   background-color: #e2e8f0;
   height: 1.5rem;
-  width: 45ch;
+  width: 70ch;
 }
 
 .btn {
@@ -110,7 +111,7 @@ body {
 }
 
 .sidebar {
-  grid-area: 1 / 1 / 21 / 2;
+  grid-area: 1 / 1 / 3 / 2;
   background-color: #1992d4;
   display: flex;
   flex-direction: column;
@@ -153,12 +154,124 @@ body {
 }
 
 .main {
+  overflow: scroll;
   padding: 15px;
-  grid-area: 4 / 2 / 21 / 21;
+  grid-area: 2 / 2 / 3 / 11;
   background-color: #e2e8f0;
   display: grid;
-  grid-template-areas: 
-  "p p a"
-  "p p a"
-  "p p t";
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.m-box-title {
+  font-weight: 600;
+}
+
+.p-box {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 20px;
+  padding: 15px 0;
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  border-left: 8px solid #ecb236;
+  gap: 30px;
+}
+
+.project-title {
+  font-size: 16px;
+  margin: 5px 0;
+}
+
+.project-description {
+  font-size: 15px;
+  color: #4b4b4b;
+  margin: 0;
+}
+
+.project-btns {
+  display: flex;
+  justify-content: end;
+  gap: 25px;
+}
+
+.a-box {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.t-box {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+.announcements {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  margin-top: 15px;
+}
+
+.an-box {
+  padding: 10px;
+}
+
+.an-title {
+  font-size: 12px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.an-description {
+  margin: 0;
+  font-size: 12px;
+}
+
+.an-box ~ .an-box {
+  border-top: 1px solid #e2e8f0;
+}
+
+.trending {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px;
+  gap: 20px;
+}
+
+.user-box {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.user-icon {
+  width: 40px;
+}
+
+.user-details {
+  display: flex;
+  flex-direction: column;
+  color: #242424;
+}
+
+.username {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.user-name {
+  font-size: 14px;
+  color: #747474;
 }
