Add form, update button

--- a/JavaScript/todo-list/src/style.css
+++ b/JavaScript/todo-list/src/style.css
@@ -1,5 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: rgb(55, 60, 68);
+  background-color: #36373a;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -11,7 +15,7 @@ body {
 }
 
 .thead {
-  background-color: rgb(88, 96, 109);
+  background-color: #484a50;
 }
 
 th, td {
@@ -20,6 +24,98 @@ th, td {
 }
 
 .task-row:hover {
-  background-color: rgb(107, 112, 121);
+  background-color: #474a52;
   cursor: pointer;
+}
+
+.dialog {
+  border: none;
+  border-radius: 20px;
+  position: relative;
+  padding: 50px;
+  background-color: #36373a;
+  color: white;
+}
+
+.dialog::backdrop {
+  background-color: #1d1d1d;
+  opacity: 0.85;
+}
+
+.d-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.close-d {
+  padding: 5px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #e67c7c;
+  font-weight: 600;
+  font-size: 20px;
+  color: #e67c7c;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #36373a;
+}
+
+.close-d:hover {
+  cursor: pointer;
+  background-color: #45474b;
+}
+
+.task-details {
+  height: 2rem;
+  width: 100%;
+  display: flex;
+}
+
+.task-key {
+  display: flex;
+  width: 12ch;
+  font-weight: 600;
+}
+
+.task-form-div {
+  display: flex;
+  align-items: center;
+}
+
+.task-label {
+  display: flex;
+  width: 12ch;
+  font-weight: 600;
+}
+
+.btn-container {
+  display: flex;
+  gap: 20px;
+}
+
+.edit-btn, .form-btn {
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 5px 20px;
+  font-weight: 600;
+  color: white;
+  background-color: #36373a;
+  width: 100%;
+}
+
+.edit-btn:hover, .form-btn:hover {
+  background-color: #45474b;
+  cursor: pointer;
+}
+
+.task-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
