--- a/JavaScript/todo-list/src/style.css
+++ b/JavaScript/todo-list/src/style.css
@@ -3,9 +3,15 @@
 }
 
 body {
+  margin: 0;
   background-color: #36373a;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+}
+
+.main-container {
+  padding: 30px;
 }
 
 .tasks-table {
@@ -118,4 +124,28 @@ th, td {
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+
+.navigation {
+  background-color: #404555;
+}
+
+.nav-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.li-nav {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 30px;
+  gap: 30px;
+}
+
+.li-nav:hover {
+  background-color: #525a75;
 }
