--- a/JavaScript/restaurant/src/styles.css
+++ b/JavaScript/restaurant/src/styles.css
@@ -1,3 +1,72 @@
 /* styles.css */
 body {
+background-color: rgb(45, 56, 45);
+color: white;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+margin: 0;
+}
+
+.header {
+  background-color: rgb(75, 97, 75);
+  display: flex;
+  justify-content: center;
+}
+
+.header-btn {
+  background-color: rgb(75, 97, 75);
+  border: none;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px 30px;
+}
+
+.header-btn:hover {
+  background-color: rgb(87, 109, 87);
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.home, .menu, .contact {
+  width: 70ch;
+}
+
+.schedule-datetime{
+  display: flex;
+}
+
+.schedule-day {
+  width: 20ch;
+  font-weight: 600;
+}
+
+.location {
+  font-weight: 600;
+}
+
+.menu-item {
+  margin: 30px 0;
+}
+
+.menu-item-title, .menu-item-description {
+  margin: 5px 0;
+}
+
+.menu-item-description {
+  font-size: 0.9rem;
+}
+
+.contact-item {
+  display: flex;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.contact-item-title {
+  font-weight: 600;
+  width: 18ch;
 }
