--- a/React/cv-project/src/styles/CV.module.css
+++ b/React/cv-project/src/styles/CV.module.css
@@ -3,7 +3,16 @@
   flex-direction: column;
   padding: 5rem;
   border: 1px solid gray;
-  max-width: 80ch;
+  max-width: 85ch;
   width: 100%;
-  gap: 3rem;
+  gap: 2rem;
+}
+p {
+  margin: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+  .cv {
+    border: none;
+  }
 }
