--- a/React/cv-project/src/styles/work.module.css
+++ b/React/cv-project/src/styles/work.module.css
@@ -28,7 +28,6 @@
 .workDateSection {
   display: flex;
   gap: 20px;
-  font-weight: 700;
 }
 
 .workResponsability {
@@ -70,3 +69,26 @@
   text-align: center;
   margin: 5px;
 }
+
+@media only screen and (max-width: 700px) {
+  .workBlock {
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   gap: 0;
+  } 
+ 
+  .educationDegree {
+   font-size: 1.05rem;
+   font-weight: 600;
+  }
+ 
+  .educationUniversity {
+   font-size: 1rem;
+   font-weight: 600;
+  }
+ 
+  .workDateSection {
+    font-weight: 500;
+   }
+ }
