--- a/React/memory-card/src/app.css
+++ b/React/memory-card/src/app.css
@@ -1,11 +1,71 @@
+* {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, p {
+  margin: 5px 0;
+}
+
+button {
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border: 1px solid #236aa3;
+  border-radius: 10px;
+}
+
+.memoryCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  gap: 10px;
+}
+
 .cardsContainer {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  width: 100ch;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: 1fr;
   gap: 20px;
 }
 
 .card {
-  width: 80px;
-  height: 100px;
-  background-color: rgb(62, 179, 130);
+  background-color: #236aa3;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.cardContent {
+  color: #DDD;
+  width: 100%;
+  min-height: 200px;
+  opacity: 0.2;
+  font-size: 1.2em;
+  padding: 10px;
+}
+
+.cardContent img {
+  width: 80%;
+  height: auto;
+}
+
+.cardContent.active {
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 800px) {
+  .cardsContainer {
+    display: grid;
+    width: 80vw;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    gap: 20px;
+  }
+  
 }
