--- a/React/memory-card/src/app.css
+++ b/React/memory-card/src/app.css
@@ -69,3 +69,14 @@ button {
   }
   
 }
+
+@media only screen and (max-width: 550px) {
+  .cardsContainer {
+    display: grid;
+    width: 80vw;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+    gap: 10px;
+  }
+  
+}
