--- a/React/shopping-cart/src/Pages/Shopping/shopping.module.css
+++ b/React/shopping-cart/src/Pages/Shopping/shopping.module.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  width: 110ch;
+  width: 90ch;
 }
 
 .shoppingNCart {
@@ -85,6 +85,12 @@
   font-size: 1.3em;
 }
 
+.cartContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cartSection {
   display: flex;
   flex-direction: column;
@@ -130,4 +136,9 @@
 
 .cartItemCount {
   font-size: 0.9em;
+}
+
+.svgIcons {
+  width: 15px;
+  display: flex;
 }
